Version 0.7.2     unreleased

	* Remove `__all__ = []` from __init__.py.
	* Upgrade to poetry-dynamic-versioning v1.9.1 for minor fixes.
	* Add Sphinx configuration path to .readthedocs.yml.
	* Version profiles_settings.xml to control PyCharm inspection profile.
	* Adjust GHA build process to allow builds for stacked PRs.
	* Add a new `run clean` target to clean up generated data.
	* Move unit tests from `tests` into `src/tests/smartapp`.
	* Update the MyPy configuration so we're using latest rules.
	* Replace black, isort, and pylint with the Ruff formatter and linter.
	* Address Ruff linter warnings and modernize the code to 2025 standards.
	* Remove importlib-metadata dependency in favor of standard library.
	* Update all dependencies and outdated constraints.

Version 0.7.1     14 Jan 2025

	* Pull in latest version of run-script-framework.
	* Upgrade to poetry-dynamic-versioning v1.5.2 for minor fixes.
	* Add .python-version in preferred order to support pyenv.
	* Adjust pyproject.toml comments to fix pip build at readthedocs.
	* Add notes in documentation that I no longer use SmartThings.
	* Add Sphinx configuration path to .readthedocs.yml.

Version 0.7.0     08 Jan 2025

	* Migrate to Poetry v2 and project-managed Poetry plugins.
	* Move configuration into pyproject.toml for pytest, mypy & coverage.
	* Upgrade to gha-shared-workflows@v8 for Poetry v2 support.
	* Migrate from pendulum to arrow for dates (interface change).
	* Fix bug in serializing BooleanSetting to and from YAML.
	* Update all dependencies and outdated constraints.

Version 0.6.9     02 Jan 2025

	* Add GitHub security policy in SECURITY.md.
	* Pull in latest version of run-script-framework.
	* Update dependencies to address Dependabot warnings.
	* Upgrade to gha-shared-workflows@v7 with publish improvements.
	* Add a default .pytest.ini file based on new cookiecutter template.
	* Change the default branch in GitHub from master to main.

Version 0.6.8     15 Oct 2024
